busybox-echo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-echo
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["sh", "-c", "echo $PORT $MESSAGE"]
