flaskapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
  labels:
    project: k8s_practice
    author: a-maxkamov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
        project: k8s_practice
        author: a-maxkamov
    spec:
      containers:
        - name: flaskapp
          image: akilbek99/flaskapp-monitoring:v1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "32Mi"
              cpu: "100m"
