k8s_hr-app_practice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-app     
  labels:
    project: k8s_practice 
    author: a-maxkamov
spec:
  replicas: 2        
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx          
        project: k8s_practice
        author: a-maxkamov
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
