k8s_nginx_practice.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
  labels:
    app: nginx
    project: k8s_practice
    author: a-maxkamov
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  labels:
    app: nginx
    project: k8s_practice
    author: a-maxkamov
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
