postgesdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
  labels:
    app: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
      - name: postgresdb
        image: postgres:14-alpine
        ports:
        - containerPort: 5420
