redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod-1
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: redis:7.0
      ports:
        - containerPort: 6379
      readinessProbe:
        tcpSocket:
          port: 6379
        initialDelaySeconds: 5
        periodSeconds: 5
  nodeSelector:
    redis: "true"

---
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod-2
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: redis:7.0
      ports:
        - containerPort: 6379
      readinessProbe:
        tcpSocket:
          port: 6379
        initialDelaySeconds: 5
        periodSeconds: 5
  nodeSelector:
    redis: "true"
