flaskapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
spec:
  selector:
    app: docker-flaskapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
