front-something.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: something-front
  labels:
    project: k8s_practice
    author: a-makhkamov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: something-front
  template:
    metadata:
      labels:
        app: something-front
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - "worker-node01"
      containers:
        - name: something-front
          image: nvrbckdown/something:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: flask-prac-service
spec:
  selector:
    app: something-front-prac
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
