akilbek-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list-app
spec:
  ingressClassName: nginx
  rules:
  - host: api-akilbek.devopschoyxona.uz
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-list-app
            port:
              number: 80
