flaskapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp-ingress
  namespace: a-maxkamov
spec:
  ingressClassName: nginx
  rules:
    - host: practice-akilbek.devopschoyxona.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaskapp
                port:
                  number: 80
