front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-prac
  namespace: a-makhkamov
spec:
  ingressClassName: nginx
  rules:
    - host: almost-last-practice-akilbek.devopschoyxona.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-prac-service
                port:
                  number: 80
